update fetch message logic